--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -27,5 +27,5 @@ jobs:
           fetch-depth: 0
       - uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${ secrets.PAT_TOKEN }
+          GITHUB_TOKEN: ${ secrets.GITHUB_TOKEN }
           GITLEAKS_LICENSE: ${ secrets.GITLEAKS_LICENSE}
