--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -10,4 +10,4 @@ jobs:
       with:
         base: ""
         head: ${{ github.ref_name }}
-        extra_args: --debug 
+        extra_args: --debug --only-verified 
