--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -10,4 +10,9 @@ jobs:
       with:
         base: ""
         head: ${{ github.ref_name }}
-        extra_args: --debug --only-verified --github-actions 
+        extra_args: --debug --only-verified --json > trufflehog-secret-scan-result.json
+    - name: Upload Trufflehog Result
+      uses: actions/upload-artifact@v2
+      with:
+        name: TruffleHog secret scan result
+        path: trufflehog-secret-scan-result.json
