--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -10,7 +10,7 @@ jobs:
       with:
         base: ""
         head: ${{ github.ref_name }}
-        extra_args: --debug --only-verified --json=trufflehog-secret-scan-result.json
+        extra_args: --help
     - name: Upload Trufflehog Result
       uses: actions/upload-artifact@v2
       with:
