--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -10,9 +10,5 @@ jobs:
       with:
         base: ""
         head: ${{ github.ref_name }}
-        extra_args: --help
-    - name: Upload Trufflehog Result
-      uses: actions/upload-artifact@v2
-      with:
-        name: TruffleHog secret scan result
-        path: trufflehog-secret-scan-result.json
+        extra_args: --json
+
