--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -10,5 +10,5 @@ jobs:
       with:
         base: ""
         head: ${{ github.ref_name }}
-        extra_args: --json
+        extra_args: --only-verified --json 
 
