--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -3,12 +3,27 @@ on: push
 jobs:
   trufflehog:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Secret Scanning using TruffleHog
-      uses: trufflesecurity/trufflehog@main
-      with:
-        base: ""
-        head: ${{ github.ref_name }}
-        extra_args: --only-verified --json 
 
+    env:
+      ORG_NAME: ${{ secrets.TRUFFLEHOG_ORG_NAME }}
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Secret Scanning
+      run: |
+        ls
+        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest file . --only-verified > trufflehog_result.txt  
+        # Add error handling if the previous command fails
+        if [ $? -ne 0 ]; then
+          echo "Trufflehog execution failed"
+          exit 1
+        fi
+
+    - name: Upload Trufflehog Result
+      uses: actions/upload-artifact@v2
+      with:
+        name: trufflehog-result
+        path: trufflehog_result.txt
