--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Secret Scanning
       run: |
-        ls
+        echo "Branch name is ${GITHUB_REF##*/}"
         docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest filesystem . --only-verified > trufflehog_result.txt  
         # Add error handling if the previous command fails
         if [ $? -ne 0 ]; then
