--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -14,8 +14,9 @@ jobs:
 
     - name: Secret Scanning
       run: |
+        echo "The repository name is ${{ env.GITHUB_REPOSITORY }}"
         echo "Branch name is ${GITHUB_REF##*/}"
-        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git file://. --since-commit main --only-verified --fail --debug > trufflehog_result.txt  
+        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/trufflesecurity/test_keys --only-verified --json > trufflehog_result.txt  
         # Add error handling if the previous command fails
         if [ $? -ne 0 ]; then
           echo "Trufflehog execution failed"
@@ -25,5 +26,5 @@ jobs:
     - name: Upload Trufflehog Result
       uses: actions/upload-artifact@v2
       with:
-        name: trufflehog-result
+        name: TruffleHog Results
         path: trufflehog_result.txt
