--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Secret Scanning
       run: |
-        echo "The repository name is $REPO_NAME"
+        echo $REPO_NAME
         echo "Branch name is ${GITHUB_REF##*/}"
         docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/trufflesecurity/test_keys --only-verified --json > trufflehog_result.txt  
         # Add error handling if the previous command fails
