--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -11,7 +11,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
     - name: Secret Scanning
       run: |
         echo $GITHUB_REPOSITORY
@@ -22,9 +21,11 @@ jobs:
           echo "Trufflehog execution failed"
           exit 1
         fi
-
     - name: Upload Trufflehog Result
       uses: actions/upload-artifact@v2
       with:
         name: TruffleHog Results
         path: trufflehog_result.txt
+    - name: Add output to Job Summary
+      run: trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
+      shell: bash
