--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -27,5 +27,5 @@ jobs:
         name: TruffleHog Results
         path: trufflehog_result.txt
     - name: Add output to Job Summary
-      run: trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
+      run: cat trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
       shell: bash
