--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -15,7 +15,7 @@ jobs:
       run: |
         echo $GITHUB_REPOSITORY
         echo "Branch name is ${GITHUB_REF##*/}"
-        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/$GITHUB_REPOSITORY --only-verified --fail > trufflehog_result.txt  
+        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/$GITHUB_REPOSITORY --only-verified --json > trufflehog_result.json  
         # Add error handling if the previous command fails
         if [ $? -ne 0 ]; then
           echo "Trufflehog execution failed"
@@ -25,7 +25,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: TruffleHog Results
-        path: trufflehog_result.txt
+        path: trufflehog_result.json
     - name: Add output to Job Summary
-      run: cat trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
+      run: cat trufflehog_result.json >> $GITHUB_STEP_SUMMARY
       shell: bash
