--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -15,7 +15,7 @@ jobs:
       run: |
         echo $GITHUB_REPOSITORY
         echo "Branch name is ${GITHUB_REF##*/}"
-        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/$GITHUB_REPOSITORY --only-verified > trufflehog_result.txt  
+        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/$GITHUB_REPOSITORY > trufflehog_result.txt  
         # Add error handling if the previous command fails
         if [ $? -ne 0 ]; then
           echo "Trufflehog execution failed"
