--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -29,3 +29,14 @@ jobs:
     - name: Add output to Job Summary
       run: cat trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
       shell: bash
+    - name: Check file size
+      run: |
+          FILE_PATH="trufflehog_result.txt"
+          FILE_SIZE=$(stat -c %s "$FILE_PATH")
+
+          if [ "$FILE_SIZE" -eq 0 ]; then
+            echo "Error: File size is zero!"
+            exit 1
+          else
+            echo "File size is not zero."
+          fi
