--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -39,4 +39,6 @@ jobs:
             exit 1
           else
             echo "File size is not zero."
+            exit 0
           fi
+           
