--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -3,11 +3,9 @@ on: push
 jobs:
   trufflehog:
     runs-on: ubuntu-latest
-
     env:
       ORG_NAME: ${{ secrets.TRUFFLEHOG_ORG_NAME }}
       PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -15,7 +13,7 @@ jobs:
       run: |
         echo $GITHUB_REPOSITORY
         echo "Branch name is ${GITHUB_REF##*/}"
-        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest git https://github.com/$GITHUB_REPOSITORY --only-verified > trufflehog_result.txt  
+        docker run --rm -e DOCKER_TTY=0 -v "$PWD:/pwd" trufflesecurity/trufflehog:latest github --repo=https://github.com/$GITHUB_REPOSITORY --token=$PAT_TOKEN > trufflehog_result.txt  
         # Add error handling if the previous command fails
         if [ $? -ne 0 ]; then
           echo "Trufflehog execution failed"
@@ -35,11 +33,9 @@ jobs:
           FILE_SIZE=$(stat -c %s "$FILE_PATH")
 
           if [ "$FILE_SIZE" -eq 0 ]; then
-            echo "Error: File size is zero!"
+            echo "No Secrets Found" >> $GITHUB_STEP_SUMMARY
             exit 0
           else
             echo "File size is not zero."
             exit 1
           fi
-          
-           
