--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -30,6 +30,17 @@ jobs:
     - name: Add output to Job Summary
       run: cat trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
       shell: bash
+
+    - name: Add a comment to the PR
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COMMENT: $(cat comment.txt)
+      run: |
+          curl -X POST \
+          -H "Authorization: token $GH_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d "{\"body\": \"$COMMENT\"}" \
+          "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
       
     - name: Check file size
       run: |
