--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -30,11 +30,17 @@ jobs:
     - name: Add output to Job Summary
       run: cat trufflehog_result.txt >> $GITHUB_STEP_SUMMARY
       shell: bash
-
+      
+    - name: Read comment from file
+      id: read-comment
+      run: |
+        COMMENT=$(cat trufflehog_result.txt)
+        echo "::set-output name=comment::$COMMENT"
+        
     - name: Add a comment to the PR
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COMMENT: $(cat comment.txt)
+        COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
