--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -39,7 +39,7 @@ jobs:
         
     - name: Add a comment to the PR
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
           curl -X POST \
