--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -42,6 +42,7 @@ jobs:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
+          COMMENT=$(echo "$COMMENT" | base64 -d)
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
           -H "Content-Type: application/json" \
