--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -34,14 +34,15 @@ jobs:
     - name: Read comment from file
       id: read-comment
       run: |
-        COMMENT=$(cat trufflehog_result.txt)
-        echo "::set-output name=comment::$COMMENT"
-        
+          COMMENT=$(cat comment.txt | base64)
+          echo "::set-output name=comment::$COMMENT"
+
     - name: Add a comment to the PR
       env:
-        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        COMMENT: ${{ steps.read-comment.outputs.comment }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
+          echo ${GITHUB_REPOSITORY}
           COMMENT=$(echo "$COMMENT" | base64 -d)
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
