--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -42,13 +42,13 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
-          echo ${GITHUB_REPOSITORY}
+          echo $GITHUB_REPOSITORY
           COMMENT=$(echo "$COMMENT" | base64 -d)
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
           -H "Content-Type: application/json" \
           -d "{\"body\": \"$COMMENT\"}" \
-          "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
+          "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/${{ github.event.pull_request.number }}/comments"
       
     - name: Check file size
       run: |
