--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Add a comment to the PR
       env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
           COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
           echo $GITHUB_REPOSITORY
@@ -48,7 +48,7 @@ jobs:
           -H "Authorization: token $GH_TOKEN" \
           -H "Content-Type: application/json" \
           -d "{\"body\": \"$COMMENT\"}" \
-          "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/${{ github.event.pull_request.number }}/comments"
+          "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
       
     - name: Check file size
       run: |
