--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -34,7 +34,7 @@ jobs:
     - name: Read comment from file
       id: read-comment
       run: |
-          COMMENT=$(cat comment.txt | base64)
+          COMMENT=$(cat trufflehog_result.txt | base64)
           echo "::set-output name=comment::$COMMENT"
 
     - name: Add a comment to the PR
@@ -42,7 +42,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
           COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
-          echo $GITHUB_REPOSITORY
+          echo ${{ github.event.pull_request.number }}
           COMMENT=$(echo "$COMMENT" | base64 -d)
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
