--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -43,14 +43,13 @@ jobs:
           COMMENT: ${{ steps.read-comment.outputs.comment }}
       run: |
           echo ${{ github.event.pull_request.number }}
-          COMMENT=$(echo "$COMMENT" | base64 -d)
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/comments \
-            -d '{"body":"Great stuff!","commit_id":"${{ steps.commit_sha.outputs.sha }}","path":"file1.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
+            -d '{"body":"Great stuff!","commit_id":"${{ steps.commit_sha.outputs.sha }}","path":"trufflehog_result.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
       
     - name: Check file size
       run: |
