--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -34,7 +34,7 @@ jobs:
     - name: Read comment from file
       id: read-comment
       run: |
-          COMMENT=$(cat trufflehog_result.txt | base64)
+          COMMENT=$(cat trufflehog_result.txt)
           echo "::set-output name=comment::$COMMENT"
 
     - name: Add a comment to the PR
