--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -41,15 +41,20 @@ jobs:
       env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
           COMMENT: ${{ steps.read-comment.outputs.comment }}
+          PULL_NUMBER: ${{ github.event.pull_request.number }}
+          COMMIT_ID: ${{ steps.commit_sha.outputs.sha }}
       run: |
-          echo ${{ github.event.pull_request.number }}
+          echo PULL_NUMBER
+          echo "$PULL_NUMBER"
+          echo COMMIT_ID
+          echo "$COMMIT_ID"
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/comments \
-            -d '{"body":"Great stuff!","commit_id":"${{ steps.commit_sha.outputs.sha }}","path":"trufflehog_result.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
+            https://api.github.com/repos/${{ github.repository }}/pulls/$PULL_NUMBER/comments \
+            -d '{"body":"Great stuff!","commit_id":"$COMMIT_ID","path":"trufflehog_result.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
       
     - name: Check file size
       run: |
