--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -41,7 +41,7 @@ jobs:
       env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
           COMMENT: ${{ steps.read-comment.outputs.comment }}
-          PULL_NUMBER: ${{ github.event.pull_request.number }}
+          PULL_NUMBER: ${{ github.event.number }}
           COMMIT_ID: ${{ steps.commit_sha.outputs.sha }}
       run: |
           echo PULL_NUMBER
@@ -53,7 +53,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/$PULL_NUMBER/comments \
+            https://api.github.com/repos/${{ github.repository }}/pulls/${ PULL_NUMBER }/comments \
             -d '{"body":"Great stuff!","commit_id":"$COMMIT_ID","path":"trufflehog_result.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
       
     - name: Check file size
