--- a/.github/workflows/trufflehog-secret-scan.yaml
+++ b/.github/workflows/trufflehog-secret-scan.yaml
@@ -45,9 +45,9 @@ jobs:
           COMMIT_ID: ${{ steps.commit_sha.outputs.sha }}
       run: |
           echo PULL_NUMBER
-          echo "$PULL_NUMBER"
+          echo ${{ github.event.number }}
           echo COMMIT_ID
-          echo "$COMMIT_ID"
+          echo ${{ steps.commit_sha.outputs.sha }}
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
