--- a/.github/workflows/hcl-codesweep.yaml
+++ b/.github/workflows/hcl-codesweep.yaml
@@ -5,6 +5,9 @@ on:
 jobs:
   scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
