--- a/.github/workflows/hcl-codesweep.yaml
+++ b/.github/workflows/hcl-codesweep.yaml
@@ -15,6 +15,8 @@ jobs:
           fetch-depth: 0
       - name: Run AppScan CodeSweep
         uses: HCL-TECH-SOFTWARE/appscan-codesweep-action@v2
+        with:
+         status: failure
     env: 
       GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       
